[gd_scene load_steps=5 format=3 uid="uid://cl10ajuxf5cj8"]

[ext_resource type="Script" uid="uid://cq6hd4o0shbjy" path="res://scripts/shop_item.gd" id="1_dg753"]
[ext_resource type="FontFile" uid="uid://urqsd4v3gvsf" path="res://assets/art/PixelatedEleganceRegular-ovyAA.ttf" id="2_4of0r"]
[ext_resource type="Texture2D" uid="uid://cggvnujpj5a1h" path="res://assets/art/BoxingGlove.png" id="2_yen48"]

[sub_resource type="LabelSettings" id="LabelSettings_dg753"]
font = ExtResource("2_4of0r")
font_size = 18
shadow_size = 0

[node name="ShopItem" type="Control"]
custom_minimum_size = Vector2(90, 145)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -140.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dg753")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Boxing Gloves"
label_settings = SubResource("LabelSettings_dg753")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ItemIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_yen48")
expand_mode = 4

[node name="Reroll" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_4of0r")
theme_override_font_sizes/font_size = 18
text = "Reroll"

[node name="Buy" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_4of0r")
theme_override_font_sizes/font_size = 18
text = "Buy"
